--- a/html/tags.html
+++ b/html/tags.html
@@ -36,7 +36,7 @@
 
   <body>
 		<div>
-				<button type="button"> Test </button>
+				<button type="button" id="button"> Test </button>
 		</div>
   </body>
 </html>
