--- a/html/talk.html
+++ b/html/talk.html
@@ -17,13 +17,13 @@
 		<div data-role="content">
 			<div class="ui-grid-a" id="talk_info">
 				<div class="ui-block-a">
-					<h1> Some Fancy Talk Title </h1>
-					<p><strong> Fancy subtitle </strong></p>
+					<h1> Beyond visual acuity </h1>
+					<p><strong> The perceptual scalability of information visualizations for large displays </strong></p>
 					<p> Authors: </p>
 						<ul>
-							<li> Jeff Heer </li>
-							<li> Bjorn Hartmann </li>
-							<li> Scott Klemmer </li>
+							<li> Beth Yost </li>
+							<li> Yonca Haciahmetoglu </li>
+							<li> Chris North  </li>
 						</ul>
 				</div>
 				<div class="ui-block-b">
@@ -36,7 +36,7 @@
 		<hr/>
 		<div>
 			<h3> Abstract </h3>
-				<p> Lorem ipsum times forty seven </p>
+				<p> Summary of the talk</p>
 		</div>
 	<div id="action_button">
 		<a href="#" data-role="button" data-icon="plus" onclick="alert('Added to your schedule')"> Add </a>
