--- a/html/madness/vertical.html
+++ b/html/madness/vertical.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head> 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="/js/jquery-1.7.1.min.js"></script>
+    <script src="/js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="jwplayer/jwplayer.js"></script>
     <style type="text/css">
         body { 
