--- a/html/mosaic/vertical.html
+++ b/html/mosaic/vertical.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head> 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js"></script>
+    <script src="/js/jquery-1.7.1.min.js"></script>
+    <script src="/js/jquery-ui.min.js"></script>
     <script src="js/jquery.rf.slideshow.js"></script>
     <script src="js/jquery.svg.min.js"></script>
     <script src="js/jquery.svgdom.min.js"></script>
