Added code and styling to rate talks

--- a/html/phone.html
+++ b/html/phone.html
@@ -29,12 +29,12 @@
 			<div class="choice_list">
 					<ul data-role="listview" data-insert="true" >
 						<li class="short light_blue">
-							<a href="#.html" data-transition="slide"> <img class="changer" src="img/add.png" data-altsrc='img/remove.png'/>  <h3 id="tile1">Select a tag</h3></a>
+							<a href="#.html" data-transition="slide"> <img class="changer" src="img/add.png" data-altsrc='img/remove.png'/>  <h3 id="tile1">Select a tag</h3> <!-- <p class="rating four"> 4 stars </p> --> </a>
 							<a class="light_blue" href="talk.html" data-transition="slide"> </a>
 						</li>
 
 						<li class="short orange">
-							<a href="#.html" data-transition="slide"> <img class="changer" src="img/add.png" data-altsrc='img/remove.png'/>  <h3 id="tile2">Select a tag</h3></a>
+							<a href="#.html" data-transition="slide"> <img class="changer" src="img/add.png" data-altsrc='img/remove.png'/>  <h3 id="tile2">Select a tag</h3><!--  <p class="rating one"> 1 stars </p> --> </a>
 							<a class="orange" href="talk.html" data-transition="slide"> </a>
 						</li>
 
