--- a/html/tags2.html
+++ b/html/tags2.html
@@ -28,7 +28,7 @@
 		//Function to add filters, global scope
      	function createFilter(tags) 
 		{
-			 alert(tags);
+			 //alert(tags);
 			$.post("http://localhost:8000/filters",
 			// Add your ip here to test with mobile device
 			//$.post("http://169.254.125.64:8000/filters",
