--- a/html/talk.html
+++ b/html/talk.html
@@ -32,14 +32,24 @@
 			</div> <!-- END GRID A -->
 
 		</div>
-
-		<hr/>
 		<div>
 			<h3> Abstract </h3>
 				<p> Summary of the talk</p>
 		</div>
+		<hr/>
+		<div id="notation">
+			<form>
+			<label for="select-choice-0" class="select"><h2> Interest in attending</h2></label>
+				<select name="rate_talk" id="rate_talk" data-native-menu="false" data-theme="c" >
+				   <option value="one" class="one"> Download</option>
+				   <option value="two" class="two"> May </option>
+				   <option value="three" class="three"> Should </option>
+				   <option value="four" class="four"> Must </option>
+				</select>
+			</form>
+
 	<div id="action_button">
-		<a href="#" data-role="button" data-icon="plus" onclick="alert('Added to your schedule')"> Add </a>
+		<a href="#" data-role="button" data-iconpos="right" data-icon="plus" onclick="alert('Added to your schedule')"> Add </a>
 	</div>
 	</div> <!-- END PAGE -->
 
