Fixed bug that broke tiles links

--- a/html/phone.html
+++ b/html/phone.html
@@ -312,6 +312,13 @@
 					'data-transition': "slideup"
 				});
 			}
+			else
+			{
+				var href = $(this.getElementsByTagName("a")[0]).attr({
+					'href': "#",
+					'data-transition': "slide"
+				});
+			}
 		});
 
 		//Code to test  swipe gesture on tile
