Added announcement (need to add this to glance server) and CHI logo

--- a/html/mosaic/tiles/announcement.html
+++ b/html/mosaic/tiles/announcement.html
@@ -10,7 +10,13 @@
 </head>
 <body>
 
-    <div id="left"> </div>
+    <div id="left">
+        <div id="announcement">
+            Don't forget, Posters and Interactivity are also open right now in the Maillot Hall!
+        </div>
+
+        <img src="../imgs/logo.png" id="logo" />
+    </div>
 
     <div id="right">
         <div id="twitter">
