--- a/html/mosaic/tiles/announcement.html
+++ b/html/mosaic/tiles/announcement.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="../css/tile.css" />
     <link rel="stylesheet" type="text/css" href="../css/tiles/announcement.css" />
+    <link href='http://fonts.googleapis.com/css?family=Magra:400,700' rel='stylesheet' type='text/css'>
 
     <script type="text/javascript" src="/lib/jquery.min.js"></script>
 
