--- a/html/mosaic/tiles/session.html
+++ b/html/mosaic/tiles/session.html
@@ -3,6 +3,8 @@
 <head>
     <link rel="stylesheet" type="text/css" href="../css/tile.css" />
     <link rel="stylesheet" type="text/css" href="../css/tiles/session.css" />
+    <link href='http://fonts.googleapis.com/css?family=Orienta' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Magra:400,700' rel='stylesheet' type='text/css'>
 
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
